[B][COLOR red]Update - v4.0.4 - Aug. 02, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Sorry folks completely forgot about .strm library file
    playback with the new pack file work, they were badly
    broken.  This is now fixed including resolving of pack
    files from library as well.[/I]

[B][COLOR red]Update - v4.0.3 - Aug. 02, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added new Pack file size calc. function.  This will
    take the current pack file and calculate the approx. size
    of each episode inside the pack.  This will also vary
    based on show Packs that are ranges ex. 1-7 when
    there are 9 total season.  Only season 1-7 will be
    accounted for in that case.[/I]

[B][COLOR red]Update - v4.0.2 - July 30, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Switched IMDb year check for titles to api request for
    small 1/2-3/4 second savings to scrape startup.  Thanks
    for the tip on that hidden api Mr.Anonymous!![/I]
[COLOR yellow]--[/COLOR][I] Code cleanup of forgotten logging.[/I]

[B][COLOR red]Update - v4.0.1 - July 30, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed pack file resolving when "Directory"
    source select mode is chosen.[/I]
[COLOR yellow]--[/COLOR][I] Fixed issue with TMDBHelper passing
    plot that contains quotes.[/I]

[B][COLOR red]Update - v4.0 - July 26, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Pack scraping support added.  This is off by default so
    enable under "Source Options". Resolving support for
    RD and PM only at this time.  Special thanks to Tikipeter
    for his collaboration in this project!!![/I]
[COLOR yellow]--[/COLOR][I] Added "is_airing" for seasons containing unaired
    episodes. This flag will avoid seasonPack scraping for
    seasons that are still airing, which returns nothing
    but incomplete season packs anyway.[/I]
[COLOR yellow]--[/COLOR][I] Added the ability to view pack files via context menu
    option courtesy of TikiPeter. You can pick and play
    any video content.[/I]