@@ -1,3 +1,10 @@
+[B][COLOR red]Update - v4.0.5 - Aug. 05, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Added 2 new string format checks for resolving
+    pack files due to some rare and rather odd internal
+    episode naming conventions used.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed a torrent caching expiry issue preventing a fresh
+    scrape under some situations.[/I]
+
 [B][COLOR red]Update - v4.0.4 - Aug. 02, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Sorry folks completely forgot about .strm library file
     playback with the new pack file work, they were badly
